--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,7 +4,7 @@ html {
     padding: 0;
     height: 100%;
     width: 100%;
-    background: url("../images/background.jpg") no-repeat center center fixed;
+    background: url("../images/background.jpeg") no-repeat center center fixed;
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
