--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -203,12 +203,7 @@ button span:before, button span:after
     width: 40px;
     background-color: #fff;
 }
-.teal-background {
-    background-color: #004D40;
-}
-.white {
-    color: white;
-}
+
 .user_card {
     height: 500px;
     width: 950px;
@@ -254,4 +249,23 @@ button span:before, button span:after
 .banner {
     width: 100%;
     /* height: 100%; */
+}
+
+.blockquote-footer {
+    height: 20px;
+    width: 300px;
+    align-content: center;
+    /* padding-left: 25px; */
+    padding-bottom: 15px;
+    /* padding-top: 15px */
+
+}
+
+.link {
+    color: #00897b !important;
+
+}
+
+.link:hover{
+    color: #00796b;
 }
