--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -4,7 +4,7 @@ html {
     padding: 0;
     height: 100%;
     width: 100%;
-    background: url("../images/background4.jpeg") no-repeat center center fixed;
+    background: url("../images/teal.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -28,6 +28,11 @@ html {
   color: #004D40 !important;
   font-size: 20px;
 }
+
+#nav-mobile {
+    margin-top: 15px;
+}
+
 *
 {
     outline: none;
@@ -94,7 +99,7 @@ form
 input[type="text"]::placeholder
 {
     /* color: #00695C; */
-    color: #78e7a6;
+    color: #b2ebf2;
     font-weight: 300;
 }
 input:focus::-webkit-input-placeholder {
@@ -104,8 +109,8 @@ input:focus::-webkit-input-placeholder {
 /* label underline focus color */
 input[type=text]:not(.browser-default):focus:not([readonly]) {
     color: white !important;
-    border-bottom: 1px solid #B2DFDB !important;
-    box-shadow: 0 1px 0 0 #B2DFDB !important;
+    border-bottom: 1px solid #00897b !important;
+    box-shadow: 0 1px 0 0 #00897b !important;
 }
 
 
@@ -228,10 +233,55 @@ button span:before, button span:after
     height: 600px;
 }
 
+/*CSS for Collections card*/
+.collection_card {
+    height: 960px !important;
+    width: 1050px !important;
+    margin-top: 150px !important;
+    padding-left: 270px !important;
+    margin-bottom: 50px !important;
+    position: relative;
+    display: flex;
+    justify-content: center !important;
+    flex-direction: column;
+    padding: 50px;
+    /* padding-top: 20px; */
+    box-shadow: 0 4px 8px 0 rgba(0, 3, 3, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+}
+
+/*CSS for Search card*/
+.search_card {
+    height: 600px !important;
+    padding-top: 10px !important;
+    margin-bottom: 25px !important;
+}
+
+.inputName {
+    padding-right: 45px !important;
+}
+
+.albumCard {
+    margin-top: 25px !important;
+    margin-left: -195px !important;
+}
+
+.cool-font {
+    padding-left: 150px;
+    color: #B2DFDB;
+}
+
+.cool-Font {
+    padding-left: 135px;
+    color: #B2DFDB;
+}
+
 .radio-inline {
     padding-top: 5px;
     padding-left: 18px;
-    color: #009688;
+    color: #28968d;
 }
 
 .logout-btn {
@@ -287,6 +337,17 @@ button span:before, button span:after
     width: 890px !important;
 }
 
+#headerCard {
+    padding-left: 20px; 
+    border-radius: .15em;
+}
+
 .alert-link {
     color: #004d40 !important;
+}
+
+.searchAll {
+    padding-top: 0px;
+    padding-left: 600px !important;
+    color: #b2ebf2;
 }
