--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -210,22 +210,13 @@ button span:before, button span:after
 }
 
 .user_card {
-    height: 500px;
+    /* height: 500px; */
     width: 950px;
     margin-top: 140px;
     margin-bottom: auto;
     background: #004D40;
     position: relative;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 50px;
-    /* padding-top: 20px; */
-    box-shadow: 0 4px 8px 0 rgba(0, 3, 3, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
-
+    z-index: 0;
 }
 
 /*CSS for Records card*/
@@ -254,9 +245,9 @@ button span:before, button span:after
 
 /*CSS for Search card*/
 .search_card {
-    height: 600px !important;
+    height: 100% !important;
     padding-top: 10px !important;
-    margin-bottom: 25px !important;
+    /* margin-bottom: 25px !important; */
 }
 
 .inputName {
@@ -294,10 +285,23 @@ button span:before, button span:after
 }
 .container {
     width: 100% !important;
+    position: absolute;
+    top: 15%;
+    background: #004D40;
     position: relative;
+    /* display: flex; */
+    justify-content: center;
+    flex-direction: column;
+    padding: 50px;
+    /* padding-top: 20px; */
+    box-shadow: 0 4px 8px 0 rgba(0, 3, 3, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
 }
+
 .splash-img {
-    height: 28em;
+    /* height: 28em; */
     margin-top: 30px;
     margin-bottom: 30px;
     position: relative;
@@ -338,8 +342,13 @@ button span:before, button span:after
 }
 
 #headerCard {
+    position: absolute;
+    top: 5%;
+    left: 5%;
     padding-left: 20px; 
     border-radius: .15em;
+    width: 12em;
+    z-index: 10;
 }
 
 .alert-link {
